--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,11 +9,11 @@
       width: 500px;
       height: 500px;
       overflow: hidden;
-      background-color: gray;
-      border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-left: auto;
+      margin-right: auto;
 
       img {
         height: 90%;
