--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .portfolio {
-  background-color: crimson;
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,7 +14,6 @@
 
     &.left {
       left: 100px;
-      transform: rotateY(180deg);
     }
 
     &.right {
@@ -37,8 +36,8 @@
 
       .item {
         width: 700px;
-        height: 100%;
-        background-color: white;
+        height: 330px;
+        border: 4px solid $mainColor;
         border-radius: 20px;
         display: flex;
         align-items: center;
@@ -59,30 +58,27 @@
             justify-content: space-between;
 
             .imgContainer {
-              width: 40px;
-              height: 40px;
+              width: 80px;
+              height: 80px;
               border-radius: 50%;
-              background-color: rgb(245, 179, 155);
               display: flex;
               align-items: center;
               justify-content: center;
 
               img {
-                width: 25px;
+                height: 30px;
+                width: 30px;
+                margin: 5px;
               }
             }
+
             h2 {
               font-size: 20px;
             }
             p {
               font-size: 13px;
             }
-            span {
-              font-size: 12px;
-              font-weight: 600;
-              text-decoration: underline;
-              cursor: pointer;
-            }
+
           }
         }
         .right {
