--- a/src/components/technologies/technologies.scss
+++ b/src/components/technologies/technologies.scss
@@ -1,3 +1,48 @@
 .technologies {
   background-color: white;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+
+  .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    justify-self: center;
+    align-self: center;
+    margin-top: -50px;
+
+    h2 {
+      margin: 10px;
+    }
+
+    .container {
+      // border: 1px solid black;
+      height: 100%;
+      width: 1000px;
+      padding: 3rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+
+      .items {
+        display: flex;
+        flex-direction: column;
+        margin: 10px;
+        text-align: center;
+        height: fit-content;
+
+        h3 {
+          margin-top: 5px;
+          overflow: hidden;
+        }
+
+        img {
+          height: 100%;
+          width: 80px;
+        }
+      }
+    }
+  }
 }
