--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,68 @@
-.contact{
-    background-color: lightblue;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap');
+
+.contact {
+  background-color: white;
+  display: flex;
+
+  .left {
+    flex: 0.5;
+
+    .imageContainer {
+      width: 500px;
+      height: 500px;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: auto;
+      margin-right: auto;
+
+      img {
+        height: 90%;
+      }
+    }
+  }
+
+  .right {
+    flex: 0.5;
+
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 80%;
+      height: 80%;
+      padding-left: 50px;
+      text-align: center;
+
+      h3 {
+        font-size: 35px;
+        margin-bottom: 20px;
+      }
+
+      p {
+        padding: 0 10px;
+        font-weight: 700;
+        font-family: 'Montserrat', sans-serif;
+      }
+
+      .items {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+
+        img {
+          height: 40px;
+          width: 40px;
+          margin: 10px;
+        }
+
+        .button {
+            cursor: pointer;
+        }
+      }
+    }
+  }
 }
