--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .intro {
   background-color: white;
   display: flex;
@@ -45,7 +47,7 @@
 
         span {
           font-size: inherit;
-          color: crimson;
+          color: $mainColor;
         }
 
         .ityped-cursor {
