--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -65,6 +65,10 @@
               align-items: center;
               justify-content: center;
 
+              .button {
+                cursor: pointer;
+              }
+
               img {
                 height: 30px;
                 width: 30px;
