--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 70px;
   background-color: white;
-  color: $mainColor;
+  color: black;
   position: fixed;
   top: 0;
   z-index: 3;
@@ -43,7 +43,7 @@
           height: 3px;
           background-color: $mainColor;
           transform-origin: left;
-          transition: all 1s ease;
+          transition: all 1.5s ease;
         }
       }
     }
