--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -37,7 +37,7 @@
       .item {
         width: 700px;
         height: 330px;
-        border: 4px solid $mainColor;
+        border: 4px solid black;
         border-radius: 20px;
         display: flex;
         align-items: center;
