--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap');
+@import "../../global.scss";
 
 .contact {
   background-color: white;
   display: flex;
+
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
 
   .left {
     flex: 0.5;
@@ -17,8 +23,16 @@
       margin-left: auto;
       margin-right: auto;
 
+      @include mobile {
+        align-items: flex-start;
+      }
+
       img {
         height: 90%;
+
+        @include mobile {
+          height: 50%;
+        }
       }
     }
   }
@@ -38,12 +52,20 @@
       h3 {
         font-size: 35px;
         margin-bottom: 20px;
+
+        @include mobile {
+          font-size: 20px ;
+        }
       }
 
       p {
         padding: 0 10px;
         font-weight: 700;
         font-family: 'Montserrat', sans-serif;
+
+        @include mobile {
+          font-size: 10px ;
+        }
       }
 
       .items {
