--- a/src/global.scss
+++ b/src/global.scss
@@ -1,1 +1,9 @@
-$mainColor: #850A0A;
+$mainColor: #850A0A; 
+
+$width: 768px;
+
+@mixin mobile {
+    @media (max-width: #{$width}) {
+        @content
+    }
+}
