--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -13,8 +13,7 @@
     flex: 0.5;
 
     .imageContainer {
-      width: 500px;
-      height: 500px;
+      height: 80vh;
       overflow: hidden;
       display: flex;
       align-items: center;
@@ -24,13 +23,14 @@
 
       @include mobile {
         align-items: flex-start;
+        height: 43vh;
       }
 
       img {
         height: 90%;
 
         @include mobile {
-          height: 50%;
+          height: 100%;
         }
       }
     }
@@ -48,10 +48,10 @@
       flex-direction: column;
       justify-content: center;
 
-
       @include mobile {
         padding-left: 0;
         align-items: center;
+        width: 90vw;
       }
 
       h1 {
@@ -59,7 +59,7 @@
         margin: 10px 0;
 
         @include mobile {
-          font-size: 40px ;
+          font-size: 40px;
         }
       }
       h2 {
@@ -69,12 +69,12 @@
         font-size: 30px;
 
         @include mobile {
-          font-size: 30px ;
+          font-size: 30px;
         }
 
         span {
           font-size: inherit;
-          color: $mainColor; 
+          color: $mainColor;
         }
 
         .ityped-cursor {
@@ -95,12 +95,21 @@
 
     a {
       position: absolute;
-      bottom: 10px;
+      bottom: 8%;
       left: 22%;
 
+      @include mobile {
+        left: 43%;
+        bottom: 0%;
+      }
+
       img {
-        width: 80px;
+        width: 20%;
         animation: arrowBlink 3s infinite;
+
+        @include mobile {
+          width: 25%;
+        }
       }
 
       @keyframes arrowBlink {
