--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -21,12 +21,22 @@
       flex-direction: column;
       justify-content: center;
 
+
+      @include mobile {
+        height: fit-content;
+        width: 90vw;
+        padding: 0;
+        justify-self: center;
+      }
+
+
+
       h2 {
         font-size: 45px;
         margin: 10px 0;
 
         @include mobile {
-          font-size: 10px ;
+          font-size: 15px ;
         }
       }
 
@@ -39,7 +49,7 @@
         margin-bottom: 10px;
 
         @include mobile {
-          font-size: 8px ;
+          font-size: 10px ;
         }
       }
 
