--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -39,14 +39,15 @@
 
   .right {
     flex: 0.5;
+    display: flex;
+    justify-content: center;
 
     .wrapper {
       display: flex;
       flex-direction: column;
       justify-content: center;
       width: 80%;
-      height: 80%;
-      padding-left: 50px;
+      height: fit-content;
       text-align: center;
 
       h3 {
@@ -54,7 +55,7 @@
         margin-bottom: 20px;
 
         @include mobile {
-          font-size: 20px ;
+          font-size: 25px ;
         }
       }
 
@@ -64,7 +65,7 @@
         font-family: 'Montserrat', sans-serif;
 
         @include mobile {
-          font-size: 10px ;
+          font-size: 16px ;
         }
       }
 
