--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -12,13 +12,20 @@
     position: absolute;
     cursor: pointer;
 
-
     &.left {
       left: 9%;
+
+      @include mobile {
+        bottom: 9%;
+      }
     }
 
     &.right {
       right: 9%;
+
+      @include mobile {
+        bottom: 9%;
+      }
     }
   }
 
@@ -28,7 +35,6 @@
     position: absolute;
     left: 0;
     transition: all 1s ease-out;
-
 
     .container {
       width: 100vw;
@@ -45,6 +51,10 @@
         align-items: center;
         justify-content: center;
 
+        @include mobile {
+          width: 84%;
+          height: 96%;
+        }
 
         .left {
           flex: 4;
@@ -68,10 +78,6 @@
               align-items: center;
               justify-content: center;
 
-        
-
-           
-
               .button {
                 cursor: pointer;
               }
@@ -80,20 +86,15 @@
                 height: 15%;
                 width: 65%;
                 margin: 5%;
-                
               }
             }
 
             h2 {
               font-size: 20px;
-
-              
-              
             }
             p {
               font-size: 13px;
             }
-
           }
         }
         .right {
@@ -106,7 +107,7 @@
 
           img {
             width: 90%;
-            border-radius: 10px; 
+            border-radius: 10px;
           }
         }
       }
