--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap");
 @import "../../global.scss";
 
 .contact {
@@ -54,17 +54,17 @@
         margin-bottom: 20px;
 
         @include mobile {
-          font-size: 25px ;
+          font-size: 25px;
         }
       }
 
       p {
         padding: 0 10px;
         font-weight: 700;
-        font-family: 'Montserrat', sans-serif;
+        font-family: "Montserrat", sans-serif;
 
         @include mobile {
-          font-size: 16px ;
+          font-size: 16px;
         }
       }
 
@@ -75,14 +75,27 @@
         justify-content: center;
         margin-top: 20px;
 
+        @include mobile {
+          margin-top: 10px;
+        }
+
         img {
           height: 40px;
           width: 40px;
-          margin: 10px;
+          margin: 30px;
         }
 
         .button {
-            cursor: pointer;
+          cursor: pointer;
+        }
+
+        h5 {
+          text-align: center;
+          font-size: 18px;
+
+          @include mobile {
+            font-size: 15px;
+          }
         }
       }
     }
