--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap");
 @import "../../global.scss";
 
 .about {
-  background-color: white;
   display: flex;
 
   @include mobile {
@@ -21,7 +20,6 @@
       flex-direction: column;
       justify-content: center;
 
-
       @include mobile {
         height: fit-content;
         width: 90vw;
@@ -29,39 +27,44 @@
         justify-self: center;
       }
 
-
-
       h2 {
         font-size: 45px;
         margin: 10px 0;
+        color: #64f4ac;
 
         @include mobile {
-          font-size: 15px ;
+          font-size: 15px;
         }
       }
 
       p {
         font-size: 18px;
         font-weight: 700;
-        font-family: 'Montserrat', sans-serif;
-        color: black;
+        font-family: "Montserrat", sans-serif;
+        color: whitesmoke;
         line-height: 1.6;
         margin-bottom: 10px;
 
         @include mobile {
-          font-size: 10px ;
+          font-size: 10px;
         }
       }
 
       a {
         text-decoration: none;
-        color: #6A0E0E;
+        color: #64f4ac;
       }
     }
   }
 
   .right {
     flex: 0.5;
+
+    .wrapper {
+      @include mobile {
+        height: 35vh;
+      }
+    }
 
     .imageContainer {
       height: 80vh;
@@ -78,10 +81,10 @@
       }
 
       img {
-        height: 90%;
+        height: 80%;
 
         @include mobile {
-          height: 100%;
+          height: 95%;
         }
       }
     }
