--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,7 +1,6 @@
 @import "../../global.scss";
 
 .intro {
-  background-color: white;
   display: flex;
 
   @include mobile {
@@ -57,6 +56,7 @@
       h1 {
         font-size: 60px;
         margin: 10px 0;
+        color: #fff;
 
         @include mobile {
           font-size: 40px;
@@ -64,6 +64,7 @@
       }
       h2 {
         font-size: 35px;
+        color: #fff;
       }
       h3 {
         font-size: 30px;
@@ -74,7 +75,7 @@
 
         span {
           font-size: inherit;
-          color: $mainColor;
+          color: #64f4ac;
         }
 
         .ityped-cursor {
