--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,10 +1,10 @@
 @import "../../global.scss";
 
 .topbar {
+  background-color: #202022;
   width: 100%;
   height: 70px;
-  background-color: white;
-  color: black;
+  color: #64f4ac;
   position: fixed;
   top: 0;
   z-index: 3;
@@ -45,7 +45,7 @@
         span {
           width: 100%;
           height: 3px;
-          background-color: $mainColor;
+          background-color: #64f4ac;
           transform-origin: left;
           transition: all 1.5s ease;
         }
@@ -54,20 +54,20 @@
   }
 
   &.active {
-    background-color: $mainColor;
-    color: antiquewhite;
+    background-color: rgba(94, 94, 102, 255);
+    color: #fff;
 
     .menuButton {
       span {
         &:first-child {
-          background-color: white;
+          background-color: #64f4ac;
           transform: rotate(45deg);
         }
         &:nth-child(2) {
           opacity: 0;
         }
         &:last-child {
-          background-color: white;
+          background-color: #64f4ac;
           transform: rotate(-45deg);
         }
       }
